# practice

./: .gitignore  CMakeLists.txt  README.md  add_cpp_primer_exercise.py  add_leetcode.py  cmake_inserter.py  cpp_primer_exercise.py  leetcode.py
src/CPP-Primer/Chapter-010/: exercise-10-20.cpp  exercise-10-21.cpp  primer-10-main.cpp
src/cpp-primer/Chapter-012/: primer-12-main.cpp
src/cpp-primer/chapter-010/: primer-10-29.cpp  primer-10-30.cpp  primer-10-31.cpp  primer-10-33.cpp  primer-10-34.cpp  primer-10-35.cpp  primer-10-36.cpp  primer-10-37.cpp  primer-10-main.cpp
src/cpp-primer/chapter-011/: primer-11-03.cpp  primer-11-04.cpp  primer-11-07.cpp  primer-11-09.cpp  primer-11-12.cpp  primer-11-13.cpp  primer-11-main.cpp
src/cpp-primer/chapter-012/: primer-12-06.cpp  primer-12-07.cpp  primer-12-14.cpp  primer-12-15.cpp  primer-12-16.cpp  primer-12-19.cpp  primer-12-23.cpp  primer-12-26.cpp  primer-12-main.cpp
src/cpp-primer/chapter-013/: message_folder.cpp  primer-13-05.cpp  primer-13-13.cpp  primer-13-18.cpp  primer-13-22.cpp  primer-13-26.cpp  primer-13-27.cpp  primer-13-30.cpp  primer-13-main.cpp
src/cpp-primer/chapter-014/: README.md
src/leetcode-weekly-contest/contest-237/: 1.cpp  2.cpp  3.cpp  4.cpp
src/leetcode-weekly-contest/contest-238/: contest-238-1.cpp  contest-238-2.cpp  contest-238-3.cpp  contest-238-4.cpp
src/leetcode/leetcode-0001/: 0001-210414.cpp  0001-210417.cpp  0001-210424.cpp
src/leetcode/leetcode-0002/: 0002-210414.cpp  0002-210419.cpp
src/leetcode/leetcode-0003/: 0003-210414.cpp  0003-210417.cpp
src/utils/: common.h
(+129 files in other folders)
